# XMost-Optimizer

./: .gitignore  CHANGELOG.md  LICENSE  README.md  components.json  package-lock.json  package.json  tailwind.config.js  vite.config.ts
.kiro/specs/: QUICKSTART.md  architecture-diagram.md  module-1-dashboard.md  module-2-memory-orchestrator.md  module-3-windows-tweaker.md  module-4-gpu-bridge.md  module-5-smart-advisor.md  tasks.md  test-plan-master.md  xmost-optimizer-main.md
.kiro/steering/: ntapi-error-handling.md  privilege-elevation.md  rust-modular-structure.md
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: gpu.rs  lib.rs  memory.rs  system.rs  tweaker.rs
src/components/: Dashboard.tsx  GpuBridge.tsx  MemoryOrchestrator.tsx  SmartAdvisor.tsx  WindowsCore.tsx
src/lib/: dialog.svelte.ts  locale.svelte.ts  utils.ts
src/lib/components/ui/badge/: Badge.svelte
src/lib/components/ui/button/: Button.svelte
src/lib/components/ui/card/: Card.svelte
src/lib/components/ui/progress/: Progress.svelte
src/lib/components/ui/separator/: Separator.svelte
src/lib/components/ui/sparkline/: Sparkline.svelte
src/lib/stores/: memoryStore.ts
src/routes/: +layout.svelte  +layout.ts  +page.svelte
src/routes/memory/: +page.svelte
src/routes/os-tweaker/: +page.svelte
src/routes/settings/: +page.svelte
