[package]
name = "xmost"
version = "1.0.0"
description = "Optimizer For Games in Windows"
authors = ["GustyxPower"]
license = "MIT"
repository = "https://github.com/Gustyx-Power/XMost-Optimizer.git"
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.6.3", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.11.3", features = [] }
tauri-plugin-log = "2"
sysinfo = "0.36.1"
wmi = "0.18.4"
windows = { version = "0.62.2", features = ["Win32_System_Memory", "Win32_Foundation", "Win32_System_SystemInformation", "Win32_System_Performance", "Win32_Security", "Win32_System_Threading"] }
ntapi = "0.4.3"
tauri-plugin-autostart = "2.5.1"
